flexbox to fix sidebar footer in overflow scenarios

--- a/app/assets/stylesheets/stacks.css.scss
+++ b/app/assets/stylesheets/stacks.css.scss
@@ -46,6 +46,9 @@
 }
 
 #sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: left;
   width: $sidebar-width;
   z-index: 2;
@@ -53,7 +56,6 @@
   top: 0;
   bottom: 0;
   background: #fff;
-  padding-bottom: 3rem;
   overflow-y: auto;
   position: fixed;
   transition: margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
@@ -77,15 +79,19 @@
     }
   }
 
+  header,
   footer {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    text-align: center;
-    background: none;
-    padding: 10px 0;
-    min-width: 0px;
+    flex: 0 0 auto;
+  }
+
+  #my-lists {
+    flex: 1 0 auto;
+  }
+
+  footer {
+    background: inherit;
+    padding: 1rem 1.33rem;
+    font-size: .85rem;
     border-top: 1px solid rgba(0,0,0,0.05);
   }
 } 
